# demo_mkdocs

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  update-deps.sh
.github/workflows/: ci.yml
about/license/: index.html
about/markdown/: index.html
docs/: index.md
docs/about/: license.md  markdown.md
docs/docs/: index.md
search/: search_index.json
