[tool.poetry]
name = "demo-mkdocs"
version = "0.1.0"
description = ""
authors = ["Morten Hansen <morten@winterop.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.0"
ruff = "^0.4.5"
mkdocs-material = "^9.5.25"
mkdocs-git-revision-date-plugin = "^0.3.2"
mkdocs-git-revision-date-localized-plugin = "^1.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
